src/objects/SmileBestPrice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SmileBestPrice</relationshipLabel>
        <relationshipName>SmileBestPrice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bemerkung_BuH__c</fullName>
        <label>Bemerkung BuH</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bemerkung_Vtr__c</fullName>
        <label>Bemerkung Vtr</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>SmileBestPrice</relationshipLabel>
        <relationshipName>SmileBestPrice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_NetNet__c</fullName>
        <label>Price NetNet</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Smile org. 1.5 HSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile GL org. 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile GL kurz org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile org. 1.6 sph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile GL org 1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile GL kurz org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile org. 1.5 Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile GL org. 1.5 S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile org. 1.6 Sun</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <label>SmileBestPrice</label>
    <nameField>
        <displayFormat>SBP-{0000}</displayFormat>
        <label>SmileBestPrice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmileBestPrice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>